# repo-scout

./: APPLICATION_NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
src/repo_scout/: __init__.py  checks.py  cli.py
tests/: test_checks.py  test_cli.py
